[package]
name = "statuses"
version = "0.2.0"
edition = "2021"
authors = ["W Kristianto <w.kristories@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kristories/statuses.rs"
documentation = "https://docs.rs/statuses"
description = "HTTP status utility for Rust"
include = [
  "src/**/*",
  "Cargo.toml",
  "codes.json"
]

[dependencies]
gjson = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"